--- a/index.css
+++ b/index.css
@@ -2,11 +2,14 @@
     padding:0;
     margin:0;
     box-sizing:border-box;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    font-family: 'sf_pro_textregular',Arial,Helvetica,sans-serif;
 }
 
-img{
+/* img{
     loading:lazy;
-}
+} */
 
 #mainbox{
     width:100%;
@@ -14,15 +17,19 @@ img{
 
 #headbox{
     display:flex;
-    padding-left:5vw;
-    position:sticky;
+    padding:0 4rem 0.2rem 0 ;
+    width: 70%;
     z-index: 1;
     top:0;
+    padding-top: 0.5rem;
     padding-right:5vw;
     justify-content:space-between;
     align-items:center;
     height:8vh;
-    background:linear-gradient(to bottom left, #200014 35%, #131000 47%);
+    z-index: 1;
+    margin: auto;
+    background:transparent;
+    border-bottom:1px solid rgba(245, 245, 245, 0.516);
 }
 
 #logo{
@@ -30,10 +37,10 @@ img{
 }
 
 .menua{
-    color:white;
+    color:black;
     font-weight:600;
     text-decoration:none;
-    font-family:cursive;
+    font-family:'sf_pro_textregular',Arial,Helvetica,sans-serif;
     font-size:1.3vw;;
     padding-left:4vw;
 }
@@ -43,26 +50,27 @@ img{
 }
 
 #logobox{
-    height:100%;
+    height:99%;
 }
 
 #bannerbox{
-    height:70vh;
+    height:103vh;
     display:flex;
     justify-content:center;
     align-items:center;
     flex-direction:column;
-    background-size:100% 100%;
+    margin-top: -3.8rem;
+    background-size:100vh 100%;
 }
 
-#bannerbox img{
+/* #bannerbox img{
     width:100%;
     object-fit: cover;
     z-index:-1;
     position:absolute;
     top:0;
     left:0;
-}
+} */
 
 #bannerbox h1{
     font-size:3rem;
@@ -76,14 +84,7 @@ img{
     font-size:4rem;
 }
 
-#sliderbox{
-    display:flex;
-    padding:10vh 0;
-    justify-content:space-evenly;
-    align-items:center;
-    width:100%;
-    background-color:rgba(213, 227, 236,0.6);
-}
+
 
 .arrow{
     height:10vh;
@@ -91,12 +92,7 @@ img{
     transition:0.1s;
 }
 
-#slider{
-    display:flex;
-    height:100%;
-    width:100%;
-    transition:all 0.5s ease-out;
-}
+
 
 #right{
     border:black solid 2px;
@@ -108,22 +104,20 @@ img{
     border-radius:14px;
 }
 
-#slider img{
-    min-width:100%;
-    height:100%;
-    object-fit: cover;
-}
 
 #frame{
-    width:700px;
+    width:70%;
     height:70vh;
-    overflow:hidden;
+    overflow:auto;
     border-radius:4vh;
     box-shadow:-2px 0px 7px black,2px 0px 7px black; 
+    /* transition: all 0.8s ease 0s; 
+    transform: translate3d(1px, 0px, 0px);  */
+    /* width: 20800px; */
 }
 
 .menua:hover{
-    color:rgb(255, 177, 177);
+    color:#fd7e14;
 }
 
 #left:hover{
@@ -208,12 +202,12 @@ img{
     padding-bottom:10vh;
     border-bottom:5px solid rgb(77, 76, 76);
     align-items:center;
-    background-color: rgb(213, 227, 236);
+    background-color:rgb(213, 227, 236);
 
 }
 
 #festtitle{
-    color:rgb(245, 36, 71);
+    color:#4c4c4c;
     font-size:2.4rem;
     text-shadow:0px 0px 5px black,0px 0px rgb(124, 121, 121),-0.1px -0.1px rgba(170, 170, 170, 0);
     font-weight: 300;
@@ -257,7 +251,10 @@ img{
     width:100%;
     padding:1vh;
     padding-top:3vh;
-    background-color:rgb(248, 224, 229);
+    /* display: flex; */
+    /* justify-content: center; */
+    /* flex-wrap: nowrap; */
+    background-color:#F8EDED;
     width:100%;
 }
 
@@ -268,6 +265,8 @@ img{
     border-top-right-radius: 5vh;
     padding-left:10vw;
     width:100%;
+    display: flex;
+    justify-content: center;
     animation:exp 30s linear infinite 0.5s;
 }
 
@@ -302,6 +301,10 @@ img{
 
 #experienceframe h1{
     font-size:8vh;
+    text-align:center;
+    /* align-self:center; */
+    /* top: 10%; */
+    color: white;
     text-shadow:1px 1px 10px white;
 }
 
@@ -314,7 +317,7 @@ img{
 #experienceanchors h1{
     padding-bottom:3vh;
     padding-top:5vh;
-    color:orangered;
+    color:#4c4c4c;
     font-size:2.4rem;
     text-shadow:0px 0px 5px black;
 }
@@ -341,8 +344,8 @@ img{
 }
 
 #experienceanchors a:hover{
-    color:black;
-    transform:scale(1.05);
+    color:#fd7e14;
+    transform:scale(1.005);
 }
 
 #map{
